--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --project=@glory-imo-dev/shared-components",
-    "test": "ng test",
-    "deploy": "ng deploy --base-href=/angular-release/"
+    "test": "ng test"
 
   },
   "private": true,
