--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,13 +31,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         #   https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-          tag: v${{github.run_number}}
+          tag: ${{github.run_number}}
         run: |
             gh release create "$tag" \
                 --repo="$GITHUB_REPOSITORY" \
-                --title="${tag#v}" \
+                --title="v${tag#v}" \
                 --generate-notes
-
-      - name: Deploy
-        run: |
-          npm run deploy
