--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         #   https://docs.github.com/en/actions/learn-github-actions/contexts#github-context
-          tag: ${{github.run_number}}
+          tag: 0.${{github.run_attempt}}.${{github.run_number}}
         run: |
             gh release create "$tag" \
                 --repo="$GITHUB_REPOSITORY" \
