--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,8 @@ on:
         - v*
     branches:
       - 'main'
+env:
+    version: 0
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -19,6 +21,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
+          registry-url: https://npm.pkg.github.com/
+          scope: "@3si-khanhnv"
 
       - name: Install Dependencies
         run: npm install
@@ -37,3 +41,11 @@ jobs:
                 --repo="$GITHUB_REPOSITORY" \
                 --title="v${tag#v}" \
                 --generate-notes
+      - run: echo "version=$(npm show @nandhirajan-tfi/my-package version)" >> $GITHUB_ENV
+      - run: npm version ${{env.version}} --no-git-tag-version --allow-same-version
+      - run: npm install
+      - run: npm build
+      - run: npm version patch -m "[RELEASE] %s" --no-git-tag-version --allow-same-version
+      - run: npm publish
+        env:
+          credentials: ${{secrets.GITHUB_TOKEN}}
